--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "eslint": "^8.31.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "prettier": "^2.8.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-paper": "^5.1.3",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
